# OPTIC

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README-IMPLEMENTATION.md  alive_filter.rs  grok-review-5e79ac44-security.md  nested_position.rs  optic_language_implementation_book_v34_extensibility_critique_applied (1).md  record_health.rs  safe_tap.rs
book-sources/: 00_frontmatter.md  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  README.md  assemble_book.py  assembled.md  manifest.json
book-sources/.github/: copilot-instructions.md
book-sources/agent-system/: HUMAN_WORKFLOW.md  MEMORY_MODEL.md  OPERATING_MODEL.md  README.md  RESEARCH_BASIS.md  TASK_PACKET_TEMPLATE.md  TOOL_COMPATIBILITY.md  registry.json
book-sources/appendices/: 00_appendices_intro.md  appendix-a_diagnostic-catalog.md  appendix-b_command-surface-and-repository-layout.md  appendix-c_milestone-ladder.md  appendix-d_normative-v0-ebnf.md  appendix-e_decision-matrix-and-arithmetic-reference.md  appendix-f_boundary-contracts-unsafe-ffi-reference-and-diagnostic-families.md  appendix-g_selected-external-reference-points-and-the-lesson-each-one-contributes.md  appendix-h_compiler-graph-store-projection-filesystem-and-tool-protocol-reference.md  appendix-i_soundness-budgets-artifact-publicity-and-self-hosting-layer-split.md  appendix-j_native-project-queries-graph-transactions-and-the-semantic-query-engine.md  appendix-k_repository-agent-operating-system-and-cross-tool-compatibility.md
book-sources/part-i-foundations/: 00_part_intro.md  01_mission-reading-strategy-and-implementation-doctrine.md  02_the-machine-problem-locality-latency-bandwidth-and-explicit-structure.md  03_runtime-as-explicit-context-costates-host-boundaries-and-control.md  04_the-project-as-a-semantic-whole-graph-store-projections-and-build-run-coherence.md  05_optics-as-the-transformation-model.md  06_grades-ownership-and-the-narrow-v0-contract.md
book-sources/tools/: agent_sync.py
crates/optic/: Cargo.toml
crates/optic-cli/: Cargo.toml
crates/optic-cli/src/: main.rs
crates/optic-cli/tests/: agent_repair_policy.rs  bench_regression.rs  cli_stubs.rs  diagnostics_json.rs  execution.rs  golden_cgir.rs  integration.rs  parse_recovery.rs  prelude_closure.rs  security_regression.rs  snapshot_update.rs
crates/optic-codegen-rust/: Cargo.toml
crates/optic-codegen-rust/src/: lib.rs
crates/optic-opt/: Cargo.toml
crates/optic-opt/src/: lib.rs
crates/optic/src/: lib.rs
docs/: effect-coeffect-v0.md  observability-v0.md  v0-executable-spec.md
examples/: alive_filter.opt  all_healths.opt  arith_fusion_pipeline.opt  cgi003_incompatible_map.opt  cgi003_unsupported.opt  cgi004_multi_query.opt  cgi005_arity_mismatch.opt  compose_decay.opt  compose_escape.opt  compose_field_access.opt  compose_focus_mismatch.opt  compose_prism.opt  compose_prism_bias.opt  compose_tap.opt  compose_traversal.opt  compose_triple.opt  four_col_pipeline.opt  game_entity_sim.opt  game_loop_pipeline.opt  grade_mismatch.opt  health_decay.opt  health_get.opt  health_position.opt  health_set.opt  host_boundary.opt  invalid_alias.opt  invalid_grade.opt  let_reuse_pipeline.opt  mixed_bias_simd.opt  mixed_prism_traversal.opt  multi_let_pipeline.opt  multi_system_fusion.opt  nested_field_triple.opt  nested_position.opt  parse_error.opt  partial_prism.opt  prism_get.opt  prism_set.opt  record_health.opt  res001_unknown.opt  (+23 more)
fixtures/: README.md
(+275 files in other folders)
