[workspace]
resolver = "2"
members = [
    "crates/optic",
    "crates/optic-syntax",
    "crates/optic-hir",
    "crates/optic-typeck",
    "crates/optic-cgir",
    "crates/optic-opt",
    "crates/optic-codegen-rust",
    "crates/optic-runtime",
    "crates/optic-diagnostics",
    "crates/optic-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Optic v0 implementation (derived from the Optic Language Implementation Book)"]
license = "MIT"  # or match root LICENSE intent
repository = "https://github.com/example/optic"  # placeholder; real one would point at the book+impl repo

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
# z3 = { version = "0.12", optional = true }  # feature-gated; libs present in env if we need later

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 1
