[package]
name = "optic-codegen-rust"
version.workspace = true
edition.workspace = true

[dependencies]
optic-cgir = { path = "../optic-cgir" }
optic-opt = { path = "../optic-opt" }
optic-runtime = { path = "../optic-runtime" }

[dev-dependencies]
optic-hir = { path = "../optic-hir" }
optic-syntax = { path = "../optic-syntax" }