[package]
name = "optic-codegen-rust"
version.workspace = true
edition.workspace = true

[dependencies]
optic-cgir = { path = "../optic-cgir" }
optic-hir = { path = "../optic-hir" }
optic-syntax = { path = "../optic-syntax" }
optic-opt = { path = "../optic-opt" }
optic-runtime = { path = "../optic-runtime" }