[package]
name = "optic-opt"
version.workspace = true
edition.workspace = true

[dependencies]
optic-cgir = { path = "../optic-cgir" }
optic-diagnostics = { path = "../optic-diagnostics" }
optic-hir = { path = "../optic-hir" }
optic-syntax = { path = "../optic-syntax" }
serde_json = { workspace = true }